<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.courses.CoursesFragment">

    <TextView
        android:id="@+id/gpa"
        android:layout_width="108dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:alpha="6"
        android:background="@drawable/rounded_corner_gpa"
        android:text="@string/courses_gpa"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_course"
        android:layout_width="365dp"
        android:layout_height="60dp"
        android:layout_marginBottom="17dp"
        android:text="@string/courses_button_add_course"
        app:icon="@drawable/baseline_add_24"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toTopOf="@+id/courses_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/courses_history"
        android:layout_width="365dp"
        android:layout_height="60dp"
        android:layout_marginBottom="5dp"
        android:text="@string/courses_button_courses_history"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/courses_view"
        android:layout_width="412dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toTopOf="@+id/add_course"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gpa"
        app:layout_constraintVertical_bias="0.416" />
</androidx.constraintlayout.widget.ConstraintLayout>